client-app/common-sync/common/objects/OBJ_SAP_Sync__c/OBJ_SAP_Sync__c.object-meta.xml
<CustomObject>
    <label>OBJ SAP Sync</label>
    <nameField>
        <label>FLD SAP Sync</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ SAP Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>