client-app/common-sync/common/objects/OBJ_SAP_Sync__c/fields/FLD_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>FLD_Page_Number__c</fullName>
    <label>FLD Page Number</label>
    <description>Last Page Number updated via sync.</description>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>