client-app/common-sync/common/objects/OBJ_SAP_Sync__c/fields/FLD_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>FLD_Page_Size__c</fullName>
    <label>FLD Page Size</label>
    <description>Last Page Size updated via sync.</description>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>