client-app/common-sync/common/objects/OBJ_SAP_Sync__c/fields/FLD_Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FLD_Sync_DateTime__c</fullName>
    <label>FLD Sync Date Time</label>
    <description>Last Completed Start Date Time updated via sync.</description>
    <type>DateTime</type>
</CustomField>